Adding some basic styles

--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,19 +1,19 @@
 <h1>Heroes List</h1>
 
-<table>
+<table class="table is-striped is-hoverable">
   <tr>
-    <th>name</th>
-    <th>fullName</th>
-    <th>gender</th>
-    <th>height</th>
-    <th>weight</th>
-    <th>eye_color</th>
-    <th>hair_color</th>
-    <th>place_of_birth</th>
-    <th>alignment</th>
-    <th>publisher_id</th>
-    <th>race_id</th>
-    <th>powers</th>
+    <th>Name</th>
+    <th>Full Name</th>
+    <th>Gender</th>
+    <th>Height</th>
+    <th>Weight</th>
+    <th>Eye Colour</th>
+    <th>Hair Colour</th>
+    <th>Place Of Birth</th>
+    <th>Alignment</th>
+    <th>Publisher</th>
+    <th>Race</th>
+    <th>Powers</th>
   </tr>
 
   <% @heroes.each do |hero| %>
