--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
           <div class="level-right">
             <p class="level-item">
               <%= link_to("View Heroes", heroes_path, :class => "button is-dark is-outlined") %>
+              <%= link_to("About", '/', :class => "button is-dark is-outlined") %>
             </p>
           </div>
         </nav>
