--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,35 +1,8 @@
 <h1>Heroes List</h1>
-
-<table class="table is-striped is-hoverable">
-  <tr>
-    <th>Name</th>
-    <th>Full Name</th>
-    <th>Gender</th>
-    <th>Height</th>
-    <th>Weight</th>
-    <th>Eye Colour</th>
-    <th>Hair Colour</th>
-    <th>Place Of Birth</th>
-    <th>Alignment</th>
-    <th>Publisher</th>
-    <th>Race</th>
-    <th>Powers</th>
-  </tr>
-
-  <% @heroes.each do |hero| %>
-    <tr>
-      <td><%= link_to hero.name, hero_path(hero.id) %></td>
-      <td><%= hero.fullName %></td>
-      <td><%= hero.gender %></td>
-      <td><%= hero.height %></td>
-      <td><%= hero.weight %></td>
-      <td><%= hero.eye_color %></td>
-      <td><%= hero.hair_color %></td>
-      <td><%= hero.place_of_birth %></td>
-      <td><%= hero.alignment %></td>
-      <td><%= hero.publisher.name unless hero.publisher.blank? %></td>
-      <td><%= hero.race.race unless hero.race.blank? %></td>
-      <td><%= hero.powers.map(&:name).join(', ') %></td>
-    </tr>
-  <% end %>
-</table>
+<div class="columns is-multiline">
+  <%=
+    render partial: 'heroes/hero',
+    collection: @heroes,
+    locals: { single: false }
+  %>
+</div>
