Making index views for publishers and races

--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Heroes List</h1>
+<h1 class="title is-2">Heroes List</h1>
 <div class="columns is-multiline">
   <%=
     render partial: 'heroes/hero',
