--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="container">
         <nav class="level">
           <div class="level-left">
-            <div class="level-item">
+            <div class="level-item title is-1">
               Heroes On Rails
             </div>
           </div>
