--- a/app/views/publisher/index.html.erb
+++ b/app/views/publisher/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Publisher#index</h1>
-<p>Find me in app/views/publisher/index.html.erb</p>
+<h1 class="title is-2">Publishers List</h1>
+
+<ul>
+  <% @publishers.each do |publisher| %>
+    <li><%= publisher.name %></li>
+  <% end %>
+</ul>
