--- a/app/views/race/index.html.erb
+++ b/app/views/race/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Race#index</h1>
-<p>Find me in app/views/race/index.html.erb</p>
+<h1 class="title is-2">Races List</h1>
+
+<ul>
+  <% @races.each do |race| %>
+    <li><%= race.race %></li>
+  <% end %>
+</ul>
