--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,10 @@
           </div>
           <div class="level-right">
             <p class="level-item">
-              <%= link_to("View Heroes", heroes_path, :class => "button is-dark is-outlined") %>
-              <%= link_to("About", '/', :class => "button is-dark is-outlined") %>
+              <%= link_to("View Heroes", heroes_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("View Publishers", publishers_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("View Races", races_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("About", '/', :class => "button is-dark is-outlined nav-button") %>
             </p>
           </div>
         </nav>
