--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Publisher#show</h1>
-<p>Find me in app/views/publisher/show.html.erb</p>
+<h1 class="title is-2"><%= @publisher.name %></h1>
+
+<div class="columns is-multiline">
+  <%=
+    render partial: 'heroes/hero',
+    collection: @publisher.heros,
+    locals: { single: false }
+  %>
+</div>
