--- a/app/views/races/show.html.erb
+++ b/app/views/races/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Race#show</h1>
-<p>Find me in app/views/race/show.html.erb</p>
+<h1 class="title is-2"><%= @race.race %></h1>
+
+<div class="columns is-multiline">
+  <%=
+    render partial: 'heroes/hero',
+    collection: @race.heros,
+    locals: { single: false }
+  %>
+</div>
