Adding powers data to hero show pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,10 +15,18 @@
  justify-content: space-between;
 }
 
+.powers-title {
+  margin-top: 2em;
+}
+
 .list-item {
   margin: 0.75em;
 }
 
 .key {
   margin-bottom: .2em!important;
+}
+
+li {
+  list-style: none;
 }
