Adding simple search functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,14 @@
               Heroes On Rails
             </div>
           </div>
+          <div class="level-item">
+            <%= render partial: 'heroes/search_form'%>
+          </div>
           <div class="level-right">
             <p class="level-item">
-              <%= link_to("View Heroes", heroes_path, :class => "button is-dark is-outlined nav-button") %>
-              <%= link_to("View Publishers", publishers_path, :class => "button is-dark is-outlined nav-button") %>
-              <%= link_to("View Races", races_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("Heroes", heroes_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("Publishers", publishers_path, :class => "button is-dark is-outlined nav-button") %>
+              <%= link_to("Races", races_path, :class => "button is-dark is-outlined nav-button") %>
               <%= link_to("About", '/', :class => "button is-dark is-outlined nav-button") %>
             </p>
           </div>
